[package]
name = "asmkit-core"
description = "A core library for generating machine code."
version = "0.0.1"
license = "MIT"
repository = "https://github.com/trimorphdev/asmkit"
homepage = "https://github.com/trimorphdev/asmkit"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
