[package]
name = "asmkit-x86_64"
description = "A runtime x86_64 assembler written in Rust."
version = "0.0.0"
license = "MIT"
repository = "https://github.com/trimorphdev/asmkit"
homepage = "https://github.com/trimorphdev/asmkit"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
asmkit-core = { path = "../asmkit-core", version = "0.0.0" }