[package]
name = "asmkit"
description = "Assembler engine written in Rust."
version = "0.0.1"
license = "MIT"
repository = "https://github.com/trimorphdev/asmkit"
homepage = "https://github.com/trimorphdev/asmkit"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
asmkit-core = { path = "../asmkit-core", version = "0.0.0" }
asmkit-x86_64 = { path = "../asmkit-x86_64", version = "0.0.0" }